[gd_scene load_steps=8 format=2]

[ext_resource path="res://switch.gd" type="Script" id=1]
[ext_resource path="res://coinDiamond.png" type="Texture" id=2]
[ext_resource path="res://coin.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
angular_velocity = 1.0
orbit_velocity = 1.0
orbit_velocity_random = 0.0
color = Color( 0, 1, 0.988235, 1 )

[node name="switch" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color( 0.337255, 1, 0, 1 )
scale = Vector2( 10, 10 )
mesh = SubResource( 2 )

[node name="platform_check" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform_check"]
shape = SubResource( 3 )

[node name="coinDiamond" type="Sprite" parent="."]
position = Vector2( 0, -3.34264 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, 23.5 )
process_material = SubResource( 4 )

[node name="collected_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_switch_body_entered"]
